<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GVL_IO" Id="{94fa442e-6485-4b26-9bf3-2f5b8b8194f6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	AxisNumber : AXIS_REF;

	DI_24VDC_CB_OK 	AT %I*: BOOL := FALSE;
	DI_ESR1 		AT %I*: BOOL := FALSE;
	DI_M1 			AT %I*: BOOL := FALSE;
	DI_LS1	 		AT %I*: BOOL := FALSE;
	DI_TS1 			AT %I*: BOOL := FALSE;
	DI_CYL1_E 		AT %I*: BOOL := FALSE;
	DI_CYL1_R 		AT %I*: BOOL := FALSE;
	DI_CYL2_E 		AT %I*: BOOL := FALSE;
	DI_CYL2_R 		AT %I*: BOOL := FALSE;
	DI_CYL3_E 		AT %I*: BOOL := FALSE;
	DI_CYL3_R 		AT %I*: BOOL := FALSE;
	DI_CYL4_E 		AT %I*: BOOL := FALSE;
	DI_CYL4_R 		AT %I*: BOOL := FALSE;
	DI_CYL5_E 		AT %I*: BOOL := FALSE;
	DI_CYL5_R 		AT %I*: BOOL := FALSE;
	DI_CYL6_E 		AT %I*: BOOL := FALSE;
	DI_CYL6_R 		AT %I*: BOOL := FALSE;
	DI_CYL7_E 		AT %I*: BOOL := FALSE;
	DI_CYL7_R 		AT %I*: BOOL := FALSE;
	DI_PS1			AT %I*: BOOL := FALSE;
	DI_PCYL1_E		AT %I*: BOOL := FALSE;
	DI_PCYL1_R		AT %I*: BOOL := FALSE;
	DI_PCYL2_E		AT %I*: BOOL := FALSE;
	DI_PCYL2_R		AT %I*: BOOL := FALSE;
	DI_ECS			AT %I*: BOOL := FALSE;
	DI_EPD			AT %I*: BOOL := FALSE;
	DI_JLU			AT %I*: BOOL := FALSE;

	DI_PE1			AT %I*: BOOL := FALSE;
	DI_PE2			AT %I*: BOOL := FALSE;
	DI_PE3			AT %I*: BOOL := FALSE;
	DI_PE4			AT %I*: BOOL := FALSE;
	DI_PE5			AT %I*: BOOL := FALSE;
	DI_PE6			AT %I*: BOOL := FALSE;
	
	AI_PT1			AT %I*: REAL := 1.0;
	AI_PT2			AT %I*: REAL := 1.0;

	DO_M1			AT %Q*: BOOL;
	DO_M2			AT %Q*: BOOL;
	DO_VB1			AT %Q*: BOOL;
	DO_VB2			AT %Q*: BOOL;
	DO_SV1			AT %Q*: BOOL;
	DO_CYL1_E		AT %Q*: BOOL;
	DO_CYL1_R		AT %Q*: BOOL;
	DO_CYL2_E		AT %Q*: BOOL;
	DO_CYL2_R		AT %Q*: BOOL;
	DO_CYL3_E		AT %Q*: BOOL;
	DO_CYL3_R		AT %Q*: BOOL;
	DO_CYL4_E		AT %Q*: BOOL;
	DO_CYL4_R		AT %Q*: BOOL;
	DO_CYL5_E		AT %Q*: BOOL;
	DO_CYL5_R		AT %Q*: BOOL;
	DO_CYL6_E		AT %Q*: BOOL;
	DO_CYL6_R		AT %Q*: BOOL;
	DO_CYL7_E		AT %Q*: BOOL;
	DO_CYL7_R		AT %Q*: BOOL;
	DO_CYL8_E		AT %Q*: BOOL;
	DO_CYL8_R		AT %Q*: BOOL;
	DO_PCYL1_E		AT %Q*: BOOL;
	DO_PCYL1_R		AT %Q*: BOOL;
	DO_PCYL2_E		AT %Q*: BOOL;
	DO_PCYL2_R		AT %Q*: BOOL;
	DO_PCYL3_E		AT %Q*: BOOL;
	DO_PCYL4_E		AT %Q*: BOOL;
	DO_PCYL5_E		AT %Q*: BOOL;
	DO_PCYL6_E		AT %Q*: BOOL;
	DO_LGreen		AT %Q*: BOOL;
	DO_LRed			AT %Q*: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>